# fdl

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  bindingcleanup.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cleanup-artifacts.yml  docs.yml  main.yml
FDL_Validation_Tooling/: ascfdl.schema.v1.json  ascfdl.schema.v2.json  fdlchecker.py
dev/: 404.html  index.html  objects.inv
dev/FDL_Apply_Template_Logic/: index.html
dev/FDL_Template_Implementer_Guide/: index.html
dev/api/: annotated.html  classes.html  classfdl_1_1detail_1_1Document.html  classfdl_1_1detail_1_1TlStringCache.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8a52ccfa4d50dffd0ca9059b965dcae1.html  dir_d44c64559bbebec7f509842c48db8b23.html  fdl__abi_8cpp.html  fdl__accessors__api_8cpp.html  fdl__builder_8cpp.html  fdl__builder_8h.html  fdl__builder_8h_source.html  fdl__builder__api_8cpp.html  fdl__canonical_8cpp.html  fdl__canonical_8h.html  fdl__canonical_8h_source.html  fdl__compat_8h.html  (+87 more)
docs/: FDL_Apply_Template_Logic.md  FDL_Template_Implementer_Guide.md  architecture.md  c_abi.md  codegen.md  contributions.md  fdl_frameline_generator.md  fdl_imaging.md  fdl_viewer.md  getting_started.md  index.md  packages.md
native/: CLAUDE.md
native/bindings/node/: .gitignore  CMakeLists.txt  package-lock.json  package.json  tsconfig.json  typedoc.json
native/bindings/node/src/: base.ts  canvas-template.ts  canvas.ts  clip-id.ts  constants.ts  context.ts  converters.ts  custom-attrs.ts  enum-maps.ts  errors.ts  fdl.ts  file-sequence.ts  framing-decision.ts  framing-intent.ts  index.ts  rounding.ts  types.ts  utils.ts  version.ts
native/bindings/node/src/addon/: binding.cc  structs.h
native/bindings/node/src/ffi/: index.ts
native/bindings/node/src/models/: _generated.ts  index.ts
native/bindings/node/tests/: custom-attrs-complex.test.ts  enums-converters.test.ts  facade.test.ts  ffi-smoke.test.ts  file-sequence.test.ts  framing-decision.test.ts  kwargs-construction.test.ts  mutation.test.ts  rounding.test.ts  scenarios.test.ts  templates.test.ts  utils.test.ts  value-types.test.ts
native/bindings/python/: pyproject.toml  setup.py
native/bindings/python/fdl/: __init__.py  _custom_attrs.py  base.py  canvas.py  canvas_template.py  cli.py  clip_id.py  clipid.py  constants.py  context.py  converters.py  enum_maps.py  errors.py  fdl.py  fdl_types.py  file_sequence.py  framing_decision.py  framing_intent.py  header.py  rounding.py  types.py  utils.py
native/bindings/python/fdl/models/: __init__.py  _generated.py
native/bindings/python/fdl/testing/: __init__.py  base.py  exported_scenarios.py  fdl_comparison.py  scenario_config.py  template_tests.py
native/bindings/python/fdl_ffi/: __init__.py  _enums.py  _functions.py  _loader.py  _structs.py  fdl_core_decl.h
native/bindings/python/tests/: conftest.py  test_canvas.py  test_cli.py  test_clipid.py  test_codegen_roundtrip.py  test_common.py  test_custom_attrs.py  test_docs.py  test_facade.py  test_facade_mutation.py  test_fdl.py  test_ffi_smoke.py  test_framing_decision.py  test_kwargs_construction.py  test_models.py  test_rounding.py  test_templates_error_validation.py  test_templates_parameterized.py  test_thread_safety.py  test_validation.py
native/bindings/python/tests/sample_data/: Scenario-9__FDL_DeliveredToVFXVendor.fdl  Scenario-9__OriginalFDL_UsedToMakePlate.fdl
native/bindings/python/tests/sample_data/faulty-handler-plugin/: pyproject.toml
native/bindings/python/tests/sample_data/faulty-handler-plugin/src/faulty_handler_plugin/: __init__.py
native/bindings/python/tests/sample_data/handler-plugin/: pyproject.toml
native/bindings/python/tests/sample_data/handler-plugin/src/handler_plugin/: __about__.py  __init__.py
native/core/: CMakeLists.txt  Doxyfile  mainpage.md
native/core/cmake/: FDLConfig.cmake.in  FDLVersion.cmake  GenerateSchemaHeader.cmake
native/core/include/fdl/: fdl_core.h
native/core/src/: fdl_abi.cpp  fdl_accessors_api.cpp  fdl_builder.cpp  fdl_builder.h  fdl_builder_api.cpp  fdl_canonical.cpp  fdl_canonical.h  fdl_collection_helpers.h  fdl_collections_api.cpp  fdl_compat.h  fdl_constants.h  fdl_custom_attr.cpp  fdl_custom_attr.h  fdl_custom_attr_api.cpp  fdl_doc.cpp  fdl_doc.h  fdl_doc_api.cpp  fdl_enum_map.h  fdl_framing.cpp  fdl_framing.h  fdl_framing_api.cpp  fdl_geometry.cpp  fdl_geometry.h  fdl_geometry_api.cpp  fdl_handles.cpp  fdl_handles.h  fdl_pipeline.cpp  fdl_pipeline.h  fdl_pipeline_api.cpp  fdl_rounding.cpp  fdl_rounding.h  fdl_template.cpp  fdl_template.h  fdl_template_api.cpp  fdl_tl_cache.h  fdl_validate.cpp  fdl_validate.h  fdl_validate_api.cpp  fdl_value_types.cpp
native/core/tests/: CMakeLists.txt  test_abi_version.cpp  test_accessors.cpp  test_builder.cpp  test_custom_attr.cpp  test_doc_lifecycle.cpp  test_framing.cpp  test_geometry.cpp  test_pipeline.cpp  test_raii_facade.cpp  test_resolve_canvas.cpp  test_rounding.cpp  test_roundtrip.cpp  test_schema_validation.cpp  test_template.cpp  test_thread_safety.cpp  test_validation.cpp  test_value_types.cpp
native/core/tests/vectors/document/: custom_attrs_fixture.json  roundtrip_vectors.json
native/core/tests/vectors/framing/: from_intent_vectors.json  generate_framing_vectors.py
native/core/tests/vectors/geometry/: generate_geometry_vectors.py  geometry_vectors.json
native/core/tests/vectors/pipeline/: generate_pipeline_vectors.py  pipeline_vectors.json
native/core/tests/vectors/rounding/: rounding_vectors.json
native/core/tests/vectors/template/: generate_template_vectors.py  template_vectors.json
native/core/tests/vectors/validation/: schema_validation_vectors.json  validation_vectors.json
native/core/tests/vectors/value_types/: dimensions_math_vectors.json  point_math_vectors.json
scripts/: build_native.py  build_node.py  check_abi_symbols.py  check_docs_ascii.py  check_uv_lock.sh  generate_cffi_decl.py  lint.py  regenerate_source_tiffs.py  run_codegen.py  update_expected_exrs.py  uv_lock.py  zip_scenario_resources.py
(+553 files in other folders)
