[project]
name = "fdl-workspace"
version = "0.0.0"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fdl",
    "fdl-imaging",
    "fdl-frameline-generator",
    "fdl-viewer",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "pytest-qt>=4.0",
    "pytest-cov>=4.0",
    "mktestdocs>=0.2.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.20",
    "pymdown-extensions>=10.0",
]

[tool.ruff]
line-length = 140
exclude = ["native/bindings/python/build/**", "native/bindings/python/fdl.egg-info/**"]

[tool.uv.workspace]
members = ["packages/*", "native/bindings/python"]

[tool.uv.sources]
fdl = { workspace = true }
fdl-imaging = { workspace = true }
fdl-frameline-generator = { workspace = true }
fdl-viewer = { workspace = true }
