[project]
name = "fdl"
version = "0.1.0"
description = "Python ctypes bindings and wrapper for libfdl_core"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "mktestdocs>=0.2.0",
    "build>=1.0",
]

[project.scripts]
fdl-validate = "fdl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fdl_ffi*", "fdl*"]

[tool.setuptools.package-data]
fdl = ["schema/**/*.json", "schema/**/*.md"]
fdl_ffi = ["libfdl_core.dylib", "libfdl_core.so", "fdl_core.dll"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
src = ["fdl", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "RUF"]
